# Shreddit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
shreddit/: app.py  shredder.py  shreddit.yml.example
