[tool.poetry]
name = "shreddit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "=1.4.3"
arrow = "^0.14.5"
backports-abc = "^0.5"
certifi = "*"
chardet = "^3.0.4"
idna = "^2.5"
praw = "^5.0.0"
python-dateutil = "^2.6.0"
requests = "^2.18.1"
tornado = "^4.5.1"
update-checker = "^0.16"
urllib3 = "^1.21.1"
pyyaml = "^5.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
